# enterprise-rag-chatbot

./: .env.example  .gitignore  Dockerfile  GITHUB_UPLOAD_INSTRUCTIONS.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_api.py  run_streamlit.py
backend/: __init__.py
backend/api/: __init__.py
backend/api/middleware/: __init__.py
backend/api/routes/: __init__.py
backend/components/: __init__.py
backend/components/documents/: __init__.py  chunking.py  manager.py  ocr.py  processor.py
backend/components/generator/: __init__.py  manager.py  rag_agent.py
backend/components/retriever/: __init__.py  manager.py  storage.py
backend/core/: __init__.py  rag_pipeline.py  settings.py
config/: __init__.py  api_services.py  environment.py
context-engineering-intro/backend/api/: main.py
frontend/: __init__.py
frontend/components/: __init__.py  chat_interface.py  document_upload.py  system_monitor.py
frontend/streamlit/: __init__.py  app.py  streamlit_app.py
tests/: conftest.py
